tests/parser/should_fail/patFail004.hs
module PatFail004 where

f (if c then a else b) = _
